# BMSTU-IU-7-TaDS

./: README.md
lab_01/: CMakeLists.txt
lab_01_02/: bignum.c  bignum.h  main.c
lab_02_05/: CMakeLists.txt
lab_02_05/inc/: menu.h  table_theatre.h  theatre.h  tools.h
lab_02_05/scripts/: make_tests.py
lab_02_05/src/: main.c  menu.c  table_theatre.c  theatre.c  tools.c
lab_03_03/: CMakeLists.txt
lab_03_03/inc/: matrix.h  menu.h  mv_operations.h  timer.h  vector.h
lab_03_03/src/: main.c  matrix.c  menu.c  mv_operations.c  timer.c  vector.c
lab_04_01/: CMakeLists.txt
lab_04_01/inc/: array_stack.h  list_stack.h  menu.h  print_sequence.h  stack.h  timer.h  tools.h
lab_04_01/src/: array_stack.c  list_stack.c  main.c  menu.c  print_sequence.c  stack.c  timer.c  tools.c
lab_05_03/: CMakeLists.txt
lab_05_03/inc/: array_queue.h  input_tools.h  list_queue.h  menu.h  queue.h  queue_simulation.h  request.h  timer.h
lab_05_03/src/: array_queue.c  input_tools.c  list_queue.c  main.c  menu.c  queue.c  queue_simulation.c  timer.c
lab_06_03/: CMakeLists.txt
lab_06_03/data/: test_3.txt  test_4.txt  test_5.txt  test_6.txt  words.txt
lab_06_03/inc/: efficiency_performance.h  input_tools.h  menu.h  tree.h
lab_06_03/scripts/: make_tests_balanced.py  make_tests_full.py  make_tests_percents.py
lab_06_03/src/: efficency_performance.c  input_tools.c  main.c  menu.c  tree.c
lab_07_04/: CMakeLists.txt
lab_07_04/inc/: efficiency_performance.h  hash_table.h  input_tools.h  tree.h
lab_07_04/scripts/: make_tests.py
lab_07_04/src/: efficiency_performance.c  hash_table.c  input_tools.c  main.c  tree.c
lab_08_07/: CMakeLists.txt
lab_08_07/inc/: graph.h  input_tools.h
lab_08_07/scripts/: make_tests.py
lab_08_07/src/: graph.c  input_tools.c  main.c
